--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: 50px;
   width: 50px;
   border: 1px solid red;
-  background-color: gray;
+  background-color:white;
   text-align: center;
 }
 
